About + Donation changes - added new color theme - unlocked overflow - added slight glow to team page - made border thicker 1px->2px - changed color of text to match background contrast - fixed sharad's insta social - started to add 'find more of us'

--- a/animation.css
+++ b/animation.css
@@ -6,7 +6,6 @@ html {
   animation: gradientFlow 8s ease infinite;
 
   font-family: Comfortaa;
-  overflow: hidden;
   height: 100vh;
 }
 
